# buildathon1

./: # MCPClient1.py  .env  CHATBOT_APP.py  Chatbot-1.ipynb  Chatbot.py  Chatbot_basicnodes.py  Chatbot_nodes.py  Check_whether_ing_there  Classes.py  Ingredients_json   MCPClient.py  MCP_BOT.py  README.md  SQLFILE.py  SQLFILEBUILDER_FINAL.py  SQLFILES.py  basic_nodes_bot.py  chatbot_test_final.py  chefs.csv  dashboard.py  db_utils.py  ingredients_listcsv.csv  inventory.csv  inventory_depletion.py  kitchen_ingredients_orders.csv  kitchen_orders.py  langgraph_bot.py  main.py  nodes.py  order_table.csv  orders.csv  orderupdate.py  promptstore.py  requirements.txt  restaurant.db  restaurant1.db  restaurant_.db  routing.py  searchers.py  supplier_addresses.csv  (+6 more)
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
SQLLooker.py/: sqllooker.py
database_build_files/: fullDB.py  kitchen_ingredient_orders.py  kitchen_orders.py  makedata.py  orderupdate.py
datafiles/: customers.csv  ingredients.csv  ingredients_listcsv.csv  meals.csv  menu_100_items_with_ingredients.csv  orders.csv  restaurant_ingredients.csv  suppliers.csv  testmenu100.csv  updated_menu_with_ingredients.csv
misc/: basicnodes.py  pyproject.toml  requirements.txt  sample_input.py
oldfiles/mcp_files/: MCPToolkit.py  MCP_BOT.py  MCP_LLMcalling.py  MCPtools.py
oldfiles/old_chatbot_files/: Chatbot-Lang.py  Letsee this cb.py  chatbot1_converted.py  (+1 more)
sqldatafiles/: ingredients_inventory.csv  ingredients_listcsv.csv  meal_ingredients.csv  meals.csv  meals_new.csv  recipes_batch_2.json  temp.py
(+4 files in other folders)
