[project]
name = "buildathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "langchain",
    "langchain-adapters",
    "langchain-groq",
    "langchain-mcp-adapters",
    "langchain-tavily",
    "langgraph",
    "langsmith",
    "mcp",
    "python-dotenv",
]
